removed horizontal scroll issues in mobile viewport

--- a/style.css
+++ b/style.css
@@ -6,7 +6,9 @@
     margin: 0;
     padding: 0;
 }
-
+html, body {
+    overflow-x: hidden;
+  }
 .logo1 {
     width: 11rem;
 }
